--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "better-sqlite3": "^11.0.0",
     "zod": "^3.23.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "@flydotio/dockerfile": "^0.7.10"
+  },
   "engines": {
     "node": ">=20.0.0"
   }
